adiciona inicialização do ScrollReveal em um novo arquivo e atualiza a referência no script principal

--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
+    <script src="js/scrollreveal-init.js"></script>
 </body>
 
 </html>
